@@ -139,6 +139,7 @@ We hope this new theme will bring accessibility improvements for users who perfe
  * Autosize text area field will now correctly resize when switching between comments toggle states (Suyash Srivastava)
  * Fix incorrect API serialisation for document `download_url` when `WAGTAILDOCS_SERVE_METHOD` is `direct` (Swojak-A)
  * Fix template configuration of snippets index results view (fidoriel, Sage Abdullah)
+ * Prevent long preview mode names from making the select element overflow the side panel (Sage Abdullah)
 
 ### Documentation
 
